[package]
name = "diceshock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
js-sys = "0.3.60"
once_cell = "1.15.0"
wasm-bindgen-futures = "0.4.33"
yew = "0.19.3"
yew-canvas = "0.2.1"
wgpu = { version = "0.13.1", features = ["webgl"] }
tobj = { version = "3.2.3", features = ["async"] }
cgmath = "0.18.0"

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["png", "jpeg"]

[dependencies.web-sys]
version = "0.3.60"
features = ["WebGl2RenderingContext", "HtmlCanvasElement"]
